--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -3,6 +3,12 @@
  * Copyright 2013-2016 Start Bootstrap
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
  */
+.intro .intro-body .brand-heading {
+  text-shadow: -1px 0 #999999, 0 1px #999999, 1px 0 #999999, 0 -1px #999999;
+}
+.page-scroll {
+  text-shadow: -1px 0 #999999, 0 1px #999999, 1px 0 #999999, 0 -1px #999999;
+}
 body {
   width: 100%;
   height: 100%;
