--- a/less/grayscale.less
+++ b/less/grayscale.less
@@ -1,6 +1,12 @@
 @import "variables.less";
 @import "mixins.less";
+.intro .intro-body .brand-heading {
+  text-shadow: -1px 0 rgb(153, 153, 153), 0 1px rgb(153, 153, 153), 1px 0 rgb(153, 153, 153), 0 -1px rgb(153, 153, 153);
+}
+.page-scroll{
+  text-shadow: -1px 0 rgb(153, 153, 153), 0 1px rgb(153, 153, 153), 1px 0 rgb(153, 153, 153), 0 -1px rgb(153, 153, 153);
 
+}
 body {
     width: 100%;
     height: 100%;
